--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="20">
-    <td> <img src="images/s200_kh_md.faisal-modified.png" alt="Md Faisal's Profile pic"></td>
+    <td> <img src="s200_kh_md.faisal-modified.png" alt="Md Faisal's Profile pic"></td>
     <td>
       <h1> Md Faisal </h1>
       <p><em>Wali Sahab</em></p>
