--- a/contact me.html
+++ b/contact me.html
@@ -4,16 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Contact me</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
-  <h2>My Contact details</h2>
-  <ol>
-    <li>Contact number= +974231445345</li>
-    <li>E-mail Id: faisalseikh254falahi@gmail.com</li>
-    <li>Address: Taj Mahal</li>
-  </ol>
-<!--
+  <h1>My Contact details</h1>
+
+  Contact number= +974231445345 <br>
+  E-mail Id: dhandha_baba@gmail.com <br>
+  Address: INDIA
+
+  <hr> <br>
+  <!--
   <form class="" action="index.html" method="post">
 
     <label>Your Name:</label>
@@ -38,19 +41,19 @@
 
   </form>
 -->
-<form action="mailto:faisalalam5857@gmail.com" method="post" enctype="text/plain">
-  <label>Your Name:</label>
-  <input type="text" name="Mureed Name" value=""><br>
-  <label>Your date of birth:</label>
-  <input type="date" name="Mureed DOB" value=""><br>
-  <label>Your Email id:</label>
-  <input type="email" name="Mureed's Email id" value=""><br>
-  <label>Your Messages</label><br>
-  <textarea name="Messages" rows="15" cols="40"></textarea><br>
-<label>Are you vaccinated?</label>
-<input type="checkbox" name="" value=""><br>
-<input type="submit" name="" >
-</form>
+  <form action="mailto:faisalalam5857@gmail.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="Mureed Name" value=""><br>
+    <label>Your date of birth:</label>
+    <input type="date" name="Mureed DOB" value=""><br>
+    <label>Your Email id:</label>
+    <input type="email" name="Mureed's Email id" value=""><br>
+    <label>Your Messages</label><br>
+    <textarea name="Messages" rows="15" cols="40"></textarea><br>
+    <label>Are you vaccinated?</label>
+    <input type="checkbox" name="" value=""><br>
+    <input type="submit" name="">
+  </form>
 
 </body>
 
