--- a/index.html
+++ b/index.html
@@ -3,133 +3,85 @@
 
 <head>
   <meta charset="utf-8">
-  <title>🤳Faisal's- Personal Website </title>
+  <title>Dhandha Bharao</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon1.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
-  <table cellspacing="20">
-    <td> <img src="s200_kh_md.faisal-modified.png" alt="Md Faisal's Profile pic"></td>
-    <td>
-      <h1> Md Faisal </h1>
-      <p><em>Wali Sahab</em></p>
-      <p>did his graduation from <strong> <a href="https://www.ox.ac.uk/">Oxford University</a> </strong> and currently an owner of many unicorn companies</p>
-    </td>
-  </table>
 
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Your Dhandha Baba</h1>
+    <h2>~ A developer by Passion!</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="mountain" src="images/mountain.png" alt="mountain">
+  </div>
 
-  <hr size="2" noshade>
-  <h3>List of All mureeds:</h3>
-  <ul>
-    <li>Yaseen,</li>
-    <li>Akhlaque- the fake wali,</li>
-    <li>moti gaand,</li>
-    <li>chotti ke,</li>
-    <li>etc.</li>
-  </ul>
-  <h3>Funding institutions list: </h3>
-  <ul>
-    <li>Rahmani:
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-pic" src="https://cdn-icons-png.flaticon.com/512/1256/1256650.png" alt="team-pic">
+      <h1>Hi‍ !</h1>
+
+      <p class="intro">We are a team of Web, Andriod and iOS developers. Your one stop solution for your bussiness.</p>
+
+    </div>
+    <hr>
+    <br>
+    <h2>Our Services</h2>
+    <div class="Our-Services">
+
       <ul>
-        <li>Fahad Sir</li>
-        <li>Atul Sir</li>
+        <li>
+          <img class="web" src="https://cdn-icons.flaticon.com/png/512/3242/premium/3242257.png?token=exp=1645267727~hmac=ba67d1ffcd362ee9dd2d48bc4c6ae482" alt="Web-image">
+          <h3>Web Designing</h3>
+          <p>We have developed over 500+ websites for our clients acroos the globe. We want our next client to be you. Let's hang-on!</p>
+          <br>
+
+        </li>
+
+        <li>
+          <img class="app" src="https://cdn-icons-png.flaticon.com/512/3437/3437364.png" alt="app-image">
+          <h3> iOS and App development</h3>
+          <p>We have more than 200 apps listed on playstore each having users base of 10k+. Want to kick start your bussiness by getting into everyone's phone?Let's meet! </p>
+
+
+        </li>
+        <br>
+        <li>
+          <img class="consulting" src="https://cdn-icons-png.flaticon.com/512/1028/1028362.png" alt="talking-image">
+          <h3>Consulting services</h3>
+          <p>Want Complete strategic methods to grow your bussiness exponentially? Let's Solve your problem together! </p>
+
+
+        </li>
       </ul>
 
-    <li>Arab elite groups:
-      <ul>
-        <li>Sheikh Abdullah Sahab</li>
-      </ul>
-
-    <li><a href="https://anjumaniislam.org/">Anjuman Islamia</a>:
-      <ul>
-        <li>Zahir kaazi, </li>
-      </ul>
-
-    <li>etc.</li>
-
-  </ul>
-  <h3>Places where our services are:</h3>
-  <h4> In India:</h4>
-  <ol>
-    <li>Mumbai</li>
-    <ul>
-      <li>Thane</li>
-      <li>Pune</li>
-      <li>CST</li>
-    </ul>
-    <li>Kolkata</li>
-    <ul>
-      <li>Durgapur</li>
-      <li>Salt lake</li>
-    </ul>
-  </ol>
-  <h4>Our Center Abroad:</h4>
-  <ol type="i">
-    <li>Uk</li>
-    <li>Usa</li>
-    <li>Canada</li>
-    <li>Singapore</li>
-  </ol>
-  <a href="contact me.html">Contact me</a>
-
-<hr size= "2" noshade >
-
-  <h3>Work Experience:</h3>
-  <table  cellspacing="10">
-    <thead>
-      <th>Duration</th>
-      <th>Company</th>
-    </thead>
-
-    <tbody>
-      <tr>
-        <td>Dec 2020 - Jan 2021</td>
-        <td>IOCL</td>
-      </tr>
-      <tr>
-        <td>June 2020 - July 2020 </td>
-        <td>IICHE</td>
-      </tr>
-      <tr>
-        <td>June 2020- July 2022</td>
-        <td>Herachui Pvt. LTD</td>
-      </tr>
-    </tbody>
-
-    <tfoot>
-
-    </tfoot>
-
-  </table>
-
-<hr size= "2" noshade>
-
-  <h3>SKILLS</h3>
-  
-  <table cellspacing="10">
-    <tr>
-      <td>C lang</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Python </td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>SQL</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>html5</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>CSS3</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-  </table>
 
 
+    </div>
+    <hr>
+    <br>
+    <div class="bottom-container">
+      <h2>Get in Touch</h2>
+      <h3> Idhar aao, aur apna dhandha bharao!</h3>
+      <p class="last">Let's chill at starbucks and sky-rocket your organisation to next level while chilling-out.</p>
+      <a class="btn" href="contact me.html">Contact me</a>
+      <br>
+      <div class="bottom">
+        <a class="footer-link" href="https://www.linkedin.com/in/mdfaisal321/">Linked-in</a>
+        <a class="footer-link" href="https://www.linkedin.com/in/abhaysingh100/">Twitter</a>
 
+        <p class="copyright">© 2022- Md-Sahab @ Dhandha-baba.</p>
+      </div>
+    </div>
+
+
+  </div>
 
 
 </body>
